Added:index.html maintanance page for MAS

--- a/MAS1/index.html
+++ b/MAS1/index.html
@@ -53,7 +53,7 @@
     <div class="maintenance-container">
         <h1>Nous reviendrons bientôt!</h1>
         <p>Désolé pour le dérangement. Nous effectuons actuellement quelques travaux de maintenance. Nous serons de nouveau en ligne sous peu !</p>
-        <p><strong>est actuellement en migration vers le nom "21jubil". Veuillez noter ce changement. Le nouveau site web sera accessible depuis l'adresse 21jubil.cpnv.me </strong></p>
+        <p><strong>Jubil1 est actuellement en migration vers le nom "21jubil". Veuillez noter ce changement. Le nouveau site web sera accessible depuis l'adresse 21jubil.cpnv.me </strong></p>
         <p>&mdash; L'équipe 21jubil.</p>
     </div>
 </body>
